infra/app/templates/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  selector:
    app: ui
  ports:
  - name: "80"
    port: 80
